// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index -> ReservationDetail -> components -> GeneralInformation render company as expect 1`] = `
<GeneralInformation
  balanceDueDetail={
    Object {
      "chargeDiscounts": 0,
      "depositBalanceDue": 0,
      "depositClaims": 0,
      "depositDiscounts": 0,
      "depositPaymentsCredits": 0,
      "depositRefunds": 0,
      "depositTaxes": 0,
      "deposits": 0,
      "rentalChargePaymentsCredits": -1020,
      "rentalChargeRefunds": 0,
      "rentalCharges": 1020,
      "rentalChargesBalanceDue": 0,
      "taxes": 0,
      "totalBalanceDue": 0,
    }
  }
  changeAgent={[Function]}
  changeCustomerOrCompany={[Function]}
  fetchBalanceDueDetailAsyncAction={[Function]}
  initialData={
    Object {
      "companyWording": "",
    }
  }
  isShowTotalBalanceDueDetail={false}
  permitDetailsChanged={[Function]}
  permitHolder={
    Immutable.Map {
      companyId: 123,
      companyName: "Abc",
      customerId: 34859,
      customerName: "Edmund Chen",
      customerType: "individual",
      customerPhone: "",
      customerEmail: "",
      availableCompanyAgents: Immutable.List [
        Immutable.Map {
          id: 313,
          name: "Alisa2 Agent-2",
          selected: false,
        },
        Immutable.Map {
          id: 335,
          name: "Alisa Alisa",
          selected: false,
        },
        Immutable.Map {
          id: 34859,
          name: "Edmund Chen",
          selected: true,
        },
      ],
    }
  }
  pos={
    Immutable.Map {
      x: 300,
      y: 300,
    }
  }
  reservationDetail={
    Object {
      "actionBarInformation": Object {
        "changePermitStatus": Object {
          "currentStatus": Object {
            "value": 0,
          },
        },
      },
      "generalInformation": Object {
        "availableCompanyAgents": Array [],
        "balanceDueDetail": Object {
          "chargeDiscounts": -1,
          "depositBalanceDue": 0,
          "depositClaims": 0,
          "depositDiscounts": -1,
          "depositPaymentsCredits": -9.83,
          "depositRefunds": 0,
          "depositTaxes": 2.49,
          "deposits": 8.34,
          "rentalChargePaymentsCredits": -9.83,
          "rentalChargeRefunds": 0.83,
          "rentalCharges": 8.34,
          "rentalChargesBalanceDue": 0,
          "taxes": 2.49,
          "totalBalanceDue": 1,
        },
        "companyName": "test",
        "customerID": "1123",
        "customerName": "Mr. Raymond Commercial",
        "customerType": "Commercial",
        "permitDate": "2016 Nov 18",
        "systemUser": "ActiveNet Admin",
      },
      "paymentPlanInformation": Object {
        "nextDueAmount": 20,
        "nextDueDate": "Dec 12, 2016 ",
        "numberOfPayment": 6,
        "overDueAmount": 19.66,
        "payerName": "Mr. Raymond Commercial",
        "paymentMethod": "Master Card ends in 1232",
      },
    }
  }
  setResetFeesConfirmation={[Function]}
  showTotalBalanceDueDetail={[Function]}
  specialHandlingData={
    Immutable.Map {
      customerId: "1123",
      specialHandling: true,
      shown: false,
    }
  }
>
  <div
    className="generalInformation panel"
  >
    <div
      className="customerInfo"
    >
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          />
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text follow-icon"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="Abc"
            >
              <div
                className="customer-info-text follow-icon"
                data-qa-id=""
              >
                Abc
              </div>
            </SafeText>
            <div
              className="following-icon"
            >
              <i
                className="icon icon-sign-m"
                disabled={false}
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
             Agent
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text follow-icon"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="Edmund Chen"
            >
              <div
                className="customer-info-text follow-icon"
                data-qa-id=""
              >
                Edmund Chen
              </div>
            </SafeText>
            <div
              className="following-icon"
            >
              <SpecialHandlingIcon
                customerId="1123"
              />
              <i
                className="icon icon-sign-m"
                data-tooltip={true}
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer Type
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="individual"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                individual
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <form
        action="#"
        name="modify"
      >
        <input
          name="holder"
          type="text"
        />
        <input
          name="holder_id"
          type="hidden"
        />
        <input
          name="holder_type"
          type="text"
        />
        <input
          name="holder_type_id"
          type="hidden"
        />
      </form>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Phone
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Email
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Date
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="2016 Nov 18"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                2016 Nov 18
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            System User
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="ActiveNet Admin"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                ActiveNet Admin
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label balance-due"
          >
            Total Balance Due
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <AsyncContent
            component={
              <div
                className="customer-info-value customer-info-text"
              >
                <span
                  className="balance-due-text"
                >
                  $0.00
                </span>
                <i
                  className="icon icon-info-circle pop-base"
                  data-popover-trigger={true}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Popover
                    className="balance-due-detail u-hidden"
                    direction="sw"
                    theme="light"
                  >
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges
                      </span>
                      <span
                        className="amount"
                      >
                        $1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Claims
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charge Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        -$1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <hr />
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                  </Popover>
                </i>
              </div>
            }
            data-qa-id="AsyncContent"
            loader={[Function]}
            placeHolder="loading"
            placeHolderType="text"
            prefix="an-"
          >
            <asyncContent>
              <div
                className="an-asynccontent"
                data-qa-id="AsyncContent"
              >
                <div
                  className="text-loader"
                >
                  <span
                    className="text-loader__text"
                  >
                    loading
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                </div>
              </div>
            </asyncContent>
          </AsyncContent>
        </div>
      </div>
    </div>
    <div
      className="paymentPlan"
    >
      <div
        className=""
      >
        <div
          className="paymentPlan__label"
        >
          Payment Plan
        </div>
        <div
          className="detail"
        >
          <span
            className="item"
            title="Payer: Mr. Raymond Commercial"
          >
            <i
              className="icon icon-people-m"
            />
            <span>
               
              Mr. Raymond Commercial
               
            </span>
          </span>
          <span
            className="item"
            title="Number of Payment(s): 6"
          >
            <i
              className="icon icon-calendar-add-m"
            />
             
            6
          </span>
          <span
            className="item"
            title="Payment Method: Master Card ends in 1232"
          >
            <i
              className="icon icon-credit-card-m"
            />
             
            Master Card ends in 1232
          </span>
          <span
            className="item"
            title="Next Due: Dec 12, 2016  $20.00"
          >
            <i
              className="icon icon-arrow-circle-o-right"
            />
             
            Dec 12, 2016 
             
            $20.00
          </span>
        </div>
      </div>
    </div>
  </div>
</GeneralInformation>
`;

exports[`index -> ReservationDetail -> components -> GeneralInformation render company as expect 2`] = `
<GeneralInformation
  balanceDueDetail={
    Object {
      "chargeDiscounts": 0,
      "depositBalanceDue": 0,
      "depositClaims": 0,
      "depositDiscounts": 0,
      "depositPaymentsCredits": 0,
      "depositRefunds": 0,
      "depositTaxes": 0,
      "deposits": 0,
      "rentalChargePaymentsCredits": -1020,
      "rentalChargeRefunds": 0,
      "rentalCharges": 1020,
      "rentalChargesBalanceDue": 0,
      "taxes": 0,
      "totalBalanceDue": 0,
    }
  }
  changeAgent={[Function]}
  changeCustomerOrCompany={[Function]}
  fetchBalanceDueDetailAsyncAction={[Function]}
  initialData={
    Object {
      "companyWording": "",
    }
  }
  isShowTotalBalanceDueDetail={false}
  permitDetailsChanged={[Function]}
  permitHolder={
    Immutable.Map {
      companyId: 123,
      companyName: "Abc",
      customerId: 34859,
      customerName: "Edmund Chen",
      customerType: "individual",
      customerPhone: "",
      customerEmail: "",
      availableCompanyAgents: Immutable.List [
        Immutable.Map {
          id: 313,
          name: "Alisa2 Agent-2",
          selected: false,
        },
        Immutable.Map {
          id: 335,
          name: "Alisa Alisa",
          selected: false,
        },
        Immutable.Map {
          id: 34859,
          name: "Edmund Chen",
          selected: true,
        },
      ],
    }
  }
  pos={
    Immutable.Map {
      x: 300,
      y: 300,
    }
  }
  reservationDetail={
    Object {
      "actionBarInformation": Object {
        "changePermitStatus": Object {
          "currentStatus": Object {
            "value": 0,
          },
        },
      },
      "generalInformation": Object {
        "availableCompanyAgents": Array [],
        "balanceDueDetail": Object {
          "chargeDiscounts": -1,
          "depositBalanceDue": 0,
          "depositClaims": 0,
          "depositDiscounts": -1,
          "depositPaymentsCredits": -9.83,
          "depositRefunds": 0,
          "depositTaxes": 2.49,
          "deposits": 8.34,
          "rentalChargePaymentsCredits": -9.83,
          "rentalChargeRefunds": 0.83,
          "rentalCharges": 8.34,
          "rentalChargesBalanceDue": 0,
          "taxes": 2.49,
          "totalBalanceDue": 1,
        },
        "companyName": "test",
        "customerID": "1123",
        "customerName": "Mr. Raymond Commercial",
        "customerType": "Commercial",
        "permitDate": "2016 Nov 18",
        "systemUser": "ActiveNet Admin",
      },
      "paymentPlanInformation": Object {
        "nextDueAmount": 20,
        "nextDueDate": "Dec 12, 2016 ",
        "numberOfPayment": 6,
        "overDueAmount": 19.66,
        "payerName": "Mr. Raymond Commercial",
        "paymentMethod": "Master Card ends in 1232",
      },
    }
  }
  setResetFeesConfirmation={[Function]}
  showTotalBalanceDueDetail={[Function]}
  specialHandlingData={
    Immutable.Map {
      specialHandling: false,
    }
  }
>
  <div
    className="generalInformation panel"
  >
    <div
      className="customerInfo"
    >
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          />
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text follow-icon"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="Abc"
            >
              <div
                className="customer-info-text follow-icon"
                data-qa-id=""
              >
                Abc
              </div>
            </SafeText>
            <div
              className="following-icon"
            >
              <i
                className="icon icon-sign-m"
                disabled={false}
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
             Agent
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value change-company-agent-group"
          >
            <div
              className="follow-icon"
            >
              <Dropdown
                autoOpen={true}
                className="change-company-agent-dropdown"
                data={
                  Array [
                    Object {
                      "id": 313,
                      "name": "Alisa2 Agent-2",
                      "selected": false,
                      "text": "Alisa2 Agent-2",
                      "value": 313,
                    },
                    Object {
                      "id": 335,
                      "name": "Alisa Alisa",
                      "selected": false,
                      "text": "Alisa Alisa",
                      "value": 335,
                    },
                    Object {
                      "id": 34859,
                      "name": "Edmund Chen",
                      "selected": true,
                      "text": "Edmund Chen",
                      "value": 34859,
                    },
                  ]
                }
                filterPlaceholder="Filter..."
                fuzzyQuery={false}
                noResult="No results found."
                onChange={[Function]}
                onMenuHide={[Function]}
                placeholder="Select one..."
                showAll={true}
                showDeselectall={false}
                showTxtOnlyCheckedOneItem={true}
                theme="flat"
                txtSuffix="selected"
                visible={true}
              >
                <div
                  className="aaui-dropdown change-company-agent-dropdown"
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                >
                  <button
                    className="aaui-dropdown__button aaui-dropdown-btn-flat"
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="button"
                    type="button"
                  >
                    <div
                      className="aaui-dropdown__button-text"
                      title=""
                    >
                       Select one...
                    </div>
                    <i
                      className="icon aaui-dropdown__button-icon icon-chevron-down"
                    />
                  </button>
                  <div
                    aria-expanded={false}
                    className="aaui-dropdown__menu-wrapper  u-hidden"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    role="combobox"
                    tabIndex={0}
                  >
                    <div
                      className="aaui-dropdown__menu"
                    >
                      <ul
                        aria-expanded={false}
                        className=""
                        role="listbox"
                      >
                        <li
                          className=""
                          key="313"
                          onClick={[Function]}
                          role="option"
                        >
                          <span>
                            Alisa2 Agent-2
                          </span>
                        </li>
                        <li
                          className=""
                          key="335"
                          onClick={[Function]}
                          role="option"
                        >
                          <span>
                            Alisa Alisa
                          </span>
                        </li>
                        <li
                          className=""
                          key="34859"
                          onClick={[Function]}
                          role="option"
                        >
                          <span>
                            Edmund Chen
                          </span>
                        </li>
                      </ul>
                      <div>
                        <div
                          className="aaui-dropdown__menu-footer"
                        >
                          <div
                            className="u-hidden"
                          >
                            <i
                              className="icon icon-spinner"
                            />
                             Loading...
                          </div>
                          <div />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </Dropdown>
            </div>
            <div
              className="following-icon"
            />
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer Type
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="individual"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                individual
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <form
        action="#"
        name="modify"
      >
        <input
          name="holder"
          type="text"
        />
        <input
          name="holder_id"
          type="hidden"
        />
        <input
          name="holder_type"
          type="text"
        />
        <input
          name="holder_type_id"
          type="hidden"
        />
      </form>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Phone
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Email
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Date
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="2016 Nov 18"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                2016 Nov 18
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            System User
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="ActiveNet Admin"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                ActiveNet Admin
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label balance-due"
          >
            Total Balance Due
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <AsyncContent
            component={
              <div
                className="customer-info-value customer-info-text"
              >
                <span
                  className="balance-due-text"
                >
                  $0.00
                </span>
                <i
                  className="icon icon-info-circle pop-base"
                  data-popover-trigger={true}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Popover
                    className="balance-due-detail u-hidden"
                    direction="sw"
                    theme="light"
                  >
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges
                      </span>
                      <span
                        className="amount"
                      >
                        $1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Claims
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charge Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        -$1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <hr />
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                  </Popover>
                </i>
              </div>
            }
            data-qa-id="AsyncContent"
            loader={[Function]}
            placeHolder="loading"
            placeHolderType="text"
            prefix="an-"
          >
            <asyncContent>
              <div
                className="an-asynccontent"
                data-qa-id="AsyncContent"
              >
                <div
                  className="text-loader"
                >
                  <span
                    className="text-loader__text"
                  >
                    loading
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                </div>
              </div>
            </asyncContent>
          </AsyncContent>
        </div>
      </div>
    </div>
    <div
      className="paymentPlan"
    >
      <div
        className=""
      >
        <div
          className="paymentPlan__label"
        >
          Payment Plan
        </div>
        <div
          className="detail"
        >
          <span
            className="item"
            title="Payer: Mr. Raymond Commercial"
          >
            <i
              className="icon icon-people-m"
            />
            <span>
               
              Mr. Raymond Commercial
               
            </span>
          </span>
          <span
            className="item"
            title="Number of Payment(s): 6"
          >
            <i
              className="icon icon-calendar-add-m"
            />
             
            6
          </span>
          <span
            className="item"
            title="Payment Method: Master Card ends in 1232"
          >
            <i
              className="icon icon-credit-card-m"
            />
             
            Master Card ends in 1232
          </span>
          <span
            className="item"
            title="Next Due: Dec 12, 2016  $20.00"
          >
            <i
              className="icon icon-arrow-circle-o-right"
            />
             
            Dec 12, 2016 
             
            $20.00
          </span>
        </div>
      </div>
    </div>
  </div>
</GeneralInformation>
`;

exports[`index -> ReservationDetail -> components -> GeneralInformation render customer as expect 1`] = `
<GeneralInformation
  balanceDueDetail={
    Object {
      "chargeDiscounts": 0,
      "depositBalanceDue": 0,
      "depositClaims": 0,
      "depositDiscounts": 0,
      "depositPaymentsCredits": 0,
      "depositRefunds": 0,
      "depositTaxes": 0,
      "deposits": 0,
      "rentalChargePaymentsCredits": -1020,
      "rentalChargeRefunds": 0,
      "rentalCharges": 1020,
      "rentalChargesBalanceDue": 0,
      "taxes": 0,
      "totalBalanceDue": 0,
    }
  }
  changeAgent={[Function]}
  changeCustomerOrCompany={[Function]}
  fetchBalanceDueDetailAsyncAction={[Function]}
  getNewPermitHolder={[Function]}
  initialData={
    Object {
      "companyWording": "",
    }
  }
  isShowTotalBalanceDueDetail={false}
  permitDetailsChanged={[Function]}
  permitHolder={
    Immutable.Map {
      companyId: 0,
      companyName: "",
      customerId: 34859,
      customerName: "Edmund Chen",
      customerType: "individual",
      customerPhone: "",
      customerEmail: "",
      availableCompanyAgents: Immutable.List [
      ],
    }
  }
  pos={
    Immutable.Map {
      x: 300,
      y: 300,
    }
  }
  reservationDetail={
    Object {
      "actionBarInformation": Object {
        "changePermitStatus": Object {
          "currentStatus": Object {
            "value": 0,
          },
        },
      },
      "generalInformation": Object {
        "availableCompanyAgents": Array [],
        "balanceDueDetail": Object {
          "chargeDiscounts": -1,
          "depositBalanceDue": 0,
          "depositClaims": 0,
          "depositDiscounts": -1,
          "depositPaymentsCredits": -9.83,
          "depositRefunds": 0,
          "depositTaxes": 2.49,
          "deposits": 8.34,
          "rentalChargePaymentsCredits": -9.83,
          "rentalChargeRefunds": 0.83,
          "rentalCharges": 8.34,
          "rentalChargesBalanceDue": 0,
          "taxes": 2.49,
          "totalBalanceDue": 1,
        },
        "companyName": "test",
        "customerID": "1123",
        "customerName": "Mr. Raymond Commercial",
        "customerType": "Commercial",
        "permitDate": "2016 Nov 18",
        "systemUser": "ActiveNet Admin",
      },
      "paymentPlanInformation": Object {
        "nextDueAmount": 20,
        "nextDueDate": "Dec 12, 2016 ",
        "numberOfPayment": 6,
        "overDueAmount": 19.66,
        "payerName": "Mr. Raymond Commercial",
        "paymentMethod": "Master Card ends in 1232",
      },
    }
  }
  setResetFeesConfirmation={[Function]}
  showTotalBalanceDueDetail={[Function]}
  specialHandlingData={
    Immutable.Map {
      customerId: "1123",
      specialHandling: true,
      shown: false,
    }
  }
  updatePermitHolder={[Function]}
>
  <div
    className="generalInformation panel"
  >
    <div
      className="customerInfo"
    >
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text follow-icon"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="Edmund Chen"
            >
              <div
                className="customer-info-text follow-icon"
                data-qa-id=""
              >
                Edmund Chen
              </div>
            </SafeText>
            <div
              className="following-icon"
            >
              <SpecialHandlingIcon
                customerId="1123"
              />
              <i
                className="icon icon-sign-m"
                disabled={false}
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer Type
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="individual"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                individual
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <form
        action="#"
        name="modify"
      >
        <input
          name="holder"
          type="text"
        />
        <input
          name="holder_id"
          type="hidden"
        />
        <input
          name="holder_type"
          type="text"
        />
        <input
          name="holder_type_id"
          type="hidden"
        />
      </form>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Phone
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Email
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Date
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="2016 Nov 18"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                2016 Nov 18
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            System User
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="ActiveNet Admin"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                ActiveNet Admin
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label balance-due"
          >
            Total Balance Due
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <AsyncContent
            component={
              <div
                className="customer-info-value customer-info-text"
              >
                <span
                  className="balance-due-text"
                >
                  $0.00
                </span>
                <i
                  className="icon icon-info-circle pop-base"
                  data-popover-trigger={true}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Popover
                    className="balance-due-detail u-hidden"
                    direction="sw"
                    theme="light"
                  >
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges
                      </span>
                      <span
                        className="amount"
                      >
                        $1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Claims
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charge Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        -$1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <hr />
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                  </Popover>
                </i>
              </div>
            }
            data-qa-id="AsyncContent"
            loader={[Function]}
            placeHolder="loading"
            placeHolderType="text"
            prefix="an-"
          >
            <asyncContent>
              <div
                className="an-asynccontent"
                data-qa-id="AsyncContent"
              >
                <div
                  className="text-loader"
                >
                  <span
                    className="text-loader__text"
                  >
                    loading
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                </div>
              </div>
            </asyncContent>
          </AsyncContent>
        </div>
      </div>
    </div>
    <div
      className="paymentPlan"
    >
      <div
        className=""
      >
        <div
          className="paymentPlan__label"
        >
          Payment Plan
        </div>
        <div
          className="detail"
        >
          <span
            className="item"
            title="Payer: Mr. Raymond Commercial"
          >
            <i
              className="icon icon-people-m"
            />
            <span>
               
              Mr. Raymond Commercial
               
            </span>
          </span>
          <span
            className="item"
            title="Number of Payment(s): 6"
          >
            <i
              className="icon icon-calendar-add-m"
            />
             
            6
          </span>
          <span
            className="item"
            title="Payment Method: Master Card ends in 1232"
          >
            <i
              className="icon icon-credit-card-m"
            />
             
            Master Card ends in 1232
          </span>
          <span
            className="item"
            title="Next Due: Dec 12, 2016  $20.00"
          >
            <i
              className="icon icon-arrow-circle-o-right"
            />
             
            Dec 12, 2016 
             
            $20.00
          </span>
        </div>
      </div>
    </div>
  </div>
</GeneralInformation>
`;

exports[`index -> ReservationDetail -> components -> GeneralInformation render customer as expect 2`] = `
<GeneralInformation
  balanceDueDetail={
    Object {
      "chargeDiscounts": 0,
      "depositBalanceDue": 0,
      "depositClaims": 0,
      "depositDiscounts": 0,
      "depositPaymentsCredits": 0,
      "depositRefunds": 0,
      "depositTaxes": 0,
      "deposits": 0,
      "rentalChargePaymentsCredits": -1020,
      "rentalChargeRefunds": 0,
      "rentalCharges": 1020,
      "rentalChargesBalanceDue": 0,
      "taxes": 0,
      "totalBalanceDue": 0,
    }
  }
  changeAgent={[Function]}
  changeCustomerOrCompany={[Function]}
  fetchBalanceDueDetailAsyncAction={[Function]}
  getNewPermitHolder={[Function]}
  initialData={
    Object {
      "companyWording": "",
    }
  }
  isShowTotalBalanceDueDetail={false}
  permitDetailsChanged={[Function]}
  permitHolder={
    Immutable.Map {
      companyId: 0,
      companyName: "",
      customerId: 34859,
      customerName: "Edmund Chen",
      customerType: "individual",
      customerPhone: "",
      customerEmail: "",
      availableCompanyAgents: Immutable.List [
      ],
    }
  }
  pos={
    Immutable.Map {
      x: 300,
      y: 300,
    }
  }
  reservationDetail={
    Object {
      "actionBarInformation": Object {
        "changePermitStatus": Object {
          "currentStatus": Object {
            "value": 0,
          },
        },
      },
      "generalInformation": Object {
        "availableCompanyAgents": Array [],
        "balanceDueDetail": Object {
          "chargeDiscounts": -1,
          "depositBalanceDue": 0,
          "depositClaims": 0,
          "depositDiscounts": -1,
          "depositPaymentsCredits": -9.83,
          "depositRefunds": 0,
          "depositTaxes": 2.49,
          "deposits": 8.34,
          "rentalChargePaymentsCredits": -9.83,
          "rentalChargeRefunds": 0.83,
          "rentalCharges": 8.34,
          "rentalChargesBalanceDue": 0,
          "taxes": 2.49,
          "totalBalanceDue": 1,
        },
        "companyName": "test",
        "customerID": "1123",
        "customerName": "Mr. Raymond Commercial",
        "customerType": "Commercial",
        "permitDate": "2016 Nov 18",
        "systemUser": "ActiveNet Admin",
      },
      "paymentPlanInformation": Object {
        "nextDueAmount": 20,
        "nextDueDate": "Dec 12, 2016 ",
        "numberOfPayment": 6,
        "overDueAmount": 19.66,
        "payerName": "Mr. Raymond Commercial",
        "paymentMethod": "Master Card ends in 1232",
      },
    }
  }
  setResetFeesConfirmation={[Function]}
  showTotalBalanceDueDetail={[Function]}
  specialHandlingData={
    Immutable.Map {
      specialHandling: false,
    }
  }
  updatePermitHolder={[Function]}
>
  <div
    className="generalInformation panel"
  >
    <div
      className="customerInfo"
    >
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text follow-icon"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="Edmund Chen"
            >
              <div
                className="customer-info-text follow-icon"
                data-qa-id=""
              >
                Edmund Chen
              </div>
            </SafeText>
            <div
              className="following-icon"
            >
              <i
                className="icon icon-sign-m"
                disabled={false}
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Customer Type
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="individual"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                individual
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <form
        action="#"
        name="modify"
      >
        <input
          name="holder"
          type="text"
        />
        <input
          name="holder_id"
          type="hidden"
        />
        <input
          name="holder_type"
          type="text"
        />
        <input
          name="holder_type_id"
          type="hidden"
        />
      </form>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Phone
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Email
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="--"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                --
              </div>
            </SafeText>
          </div>
        </div>
      </div>
      <div
        className="aaui-flex afx-xl-12 customer-info-row"
      >
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            Date
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="2016 Nov 18"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                2016 Nov 18
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label"
          >
            System User
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-value"
          >
            <SafeText
              className="customer-info-text"
              dangerMode={false}
              data-qa-id=""
              decode={true}
              tagName="div"
              text="ActiveNet Admin"
            >
              <div
                className="customer-info-text"
                data-qa-id=""
              >
                ActiveNet Admin
              </div>
            </SafeText>
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <div
            className="customer-info-label balance-due"
          >
            Total Balance Due
          </div>
        </div>
        <div
          className="afx-xl-2-12"
        >
          <AsyncContent
            component={
              <div
                className="customer-info-value customer-info-text"
              >
                <span
                  className="balance-due-text"
                >
                  $0.00
                </span>
                <i
                  className="icon icon-info-circle pop-base"
                  data-popover-trigger={true}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <Popover
                    className="balance-due-detail u-hidden"
                    direction="sw"
                    theme="light"
                  >
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges
                      </span>
                      <span
                        className="amount"
                      >
                        $1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Claims
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charge Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        -$1020.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Rental Charges Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <hr />
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Taxes
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Discounts
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Payments/Credits
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                    <div
                      className="balance-due__item bold"
                    >
                      <span
                        className="upArrow__label"
                      >
                        Deposit Balance Due
                      </span>
                      <span
                        className="amount"
                      >
                        $0.00
                      </span>
                    </div>
                  </Popover>
                </i>
              </div>
            }
            data-qa-id="AsyncContent"
            loader={[Function]}
            placeHolder="loading"
            placeHolderType="text"
            prefix="an-"
          >
            <asyncContent>
              <div
                className="an-asynccontent"
                data-qa-id="AsyncContent"
              >
                <div
                  className="text-loader"
                >
                  <span
                    className="text-loader__text"
                  >
                    loading
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                  <span
                    className="text-loader__dot"
                  >
                    .
                  </span>
                </div>
              </div>
            </asyncContent>
          </AsyncContent>
        </div>
      </div>
    </div>
    <div
      className="paymentPlan"
    >
      <div
        className=""
      >
        <div
          className="paymentPlan__label"
        >
          Payment Plan
        </div>
        <div
          className="detail"
        >
          <span
            className="item"
            title="Payer: Mr. Raymond Commercial"
          >
            <i
              className="icon icon-people-m"
            />
            <span>
               
              Mr. Raymond Commercial
               
            </span>
          </span>
          <span
            className="item"
            title="Number of Payment(s): 6"
          >
            <i
              className="icon icon-calendar-add-m"
            />
             
            6
          </span>
          <span
            className="item"
            title="Payment Method: Master Card ends in 1232"
          >
            <i
              className="icon icon-credit-card-m"
            />
             
            Master Card ends in 1232
          </span>
          <span
            className="item"
            title="Next Due: Dec 12, 2016  $20.00"
          >
            <i
              className="icon icon-arrow-circle-o-right"
            />
             
            Dec 12, 2016 
             
            $20.00
          </span>
        </div>
      </div>
    </div>
  </div>
</GeneralInformation>
`;
